--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.less
@@ -355,8 +355,9 @@
                 .align-items(center);
                 .justifyContet(flex-end);
                 text-align: right;
-                margin: 1px 5px;
+                margin: 1px 8px;
                 min-height: 35px;
+                margin-bottom: 4px;
             }
         }
     }
