--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/accountSettings.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/accountSettings.less
@@ -49,10 +49,11 @@
 
     .section {
         //background: @textColorDarkGrey;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
         padding: 20px;
         border-radius: 5px;
         background: @textColorDarkGrey;
+        box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.42);
 
         md-input-container {
             margin-bottom: 0;
