--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
@@ -117,6 +117,7 @@
         .stop-watch-wrapper {
             .displayFlex();
             padding: 11px 15px 9px 10px;
+            background: @textColorLightWhite
         }
 
 
@@ -198,7 +199,7 @@
     }
 
     .black-bullet {
-        background: @borderColorWhite;
+        background: @headerbackground;
         color: @textColorWhite;
         text-align: center;
         border-radius: 10px;
@@ -461,9 +462,9 @@
 
     .backgrounds {
         margin: 25px auto;
-        background: @backgroundColorMenu;
+        background: @headerbackground;
         border-radius: 10px;
-        color: @textColorBlack;
+        color: @textColorWhite;
         padding: 10px 20px;
 
         svg {
