--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/themeLight.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/themeLight.less
@@ -151,7 +151,7 @@ body.theme-light {
     }
 
     md-toast.md-default-theme .md-toast-content, md-toast .md-toast-content {
-        background: @buttonColorHover;
+    //    background: @buttonColorHover;
     }
     /*tabs*/
     /*md-tabs {
