--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/angularMaterialOverride.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/angularMaterialOverride.css
@@ -1,11 +1,11 @@
 ﻿.dd-list md-content {
-  background: #323538;
-  color: #f5f5f5;
+  background: #ffffff;
+  color: #212325;
 }
 .dd-list md-option {
   margin: 0 15px;
   font-size: 13px;
-  border-bottom: 1px solid #282828;
+  border-bottom: 1px solid #212325;
 }
 .dd-list md-option:last-child {
   border: none;
@@ -21,14 +21,14 @@
   padding-bottom: 0;
 }
 md-select:not([disabled]):focus .md-select-value {
-  color: #f5f5f5;
+  color: #212325;
   border-bottom: 1px solid #376e8c;
 }
 md-select .md-select-value.md-select-placeholder {
-  color: #f5f5f5;
+  color: #212325;
 }
 md-select-menu md-option:focus:not([disabled]):not([selected]) {
-  background: #323538;
+  background: #ffffff;
 }
 md-input-container:not(.md-input-invalid).md-input-has-value label {
   color: #888b8e;
@@ -74,18 +74,18 @@ md-input-container:not(.md-input-invalid).md-input-focused .md-input {
   background: #4190b9;
 }
 md-input-container .md-input {
-  color: #f5f5f5;
+  color: #ffffff;
 }
 md-dialog {
-  color: #282828;
+  color: #212325;
 }
 md-menu-content md-menu-item > button.md-button,
 md-menu-content md-menu-item > .md-button span {
-  color: #282828;
+  color: #212325;
 }
 md-toast.md-default-theme .md-toast-content,
 md-toast .md-toast-content {
-  background: #4190b9;
+  background: #ec610d;
 }
 .layout-padding {
   padding: 0;
@@ -129,10 +129,10 @@ md-tabs .md-tab {
   text-transform: capitalize;
 }
 md-tabs .md-tab.md-active {
-  color: #f5f5f5;
+  color: #ffffff;
 }
 md-tabs .md-tab.md-active span.textTC20 {
-  color: #f5f5f5 !important;
+  color: #ffffff !important;
 }
 @media (max-width: 600px) {
   md-tabs .md-tab {
