--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.css
@@ -240,6 +240,25 @@ library-list {
 }
 .page-head .need-follow .notificationButton {
   margin: 3px 0;
+  font-weight: bold;
+  font-size: 16px;
+  padding: 0 30px;
+  line-height: 25px;
+  border-radius: 4px;
+  background: #ec610d;
+  color: #ffffff;
+}
+.page-head .need-follow .notificationButton svg,
+.page-head .need-follow .notificationButton md-icon {
+  fill: #ffffff;
+}
+.page-head .need-follow .notificationButton:hover:not([disabled]) {
+  background: #c4510b;
+  color: #ffffff;
+}
+.page-head .need-follow .notificationButton:hover:not([disabled]) svg,
+.page-head .need-follow .notificationButton:hover:not([disabled]) md-icon {
+  fill: #ffffff;
 }
 .box-nav-bar ~ div {
   margin: 0 -8px;
